--- a/src/Styles/Form.css
+++ b/src/Styles/Form.css
@@ -1,5 +1,5 @@
 body {
-    background-color:  #201E1F;
+    background-color:  #6B7A89;
 
 }
 
@@ -7,4 +7,5 @@ body {
     width: 100%;
     max-width: 450px;
     margin: 4rem auto;
+    padding: 10px;
 }
