--- a/src/Styles/Form.css
+++ b/src/Styles/Form.css
@@ -7,6 +7,8 @@ body {
     width: 100%;
     max-width: 450px;
     margin: 4rem auto;
+    border-radius: 20px;
     padding: 10px;
     background: #675C5A;
+
 }
