--- a/src/Styles/Form.css
+++ b/src/Styles/Form.css
@@ -31,4 +31,9 @@ body {
 
 .form-cont button {
     font-size: 20px;
+    border: none;
+    border-radius: 10px;
+    transition: background-color 0.3s ease;
+    margin-right: 10px;
+    cursor: pointer;
 }
