--- a/src/Styles/Form.css
+++ b/src/Styles/Form.css
@@ -9,7 +9,7 @@ body {
     margin: 4rem auto;
     border-radius: 20px;
     padding: 40px;
-    background: #675C5A;
+    background: #ffffff;
     font-family: sans-serif;
 }
 
