--- a/src/Styles/Form.css
+++ b/src/Styles/Form.css
@@ -26,7 +26,7 @@ body {
     margin-bottom: 24px;
     border: 2px solid #7cb1e5;
     border-radius: 12px;
-    background: #1d1a1d;
+    background: #f1f1f1;
 }
 
 .form-cont button {
